# pulldown-latex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  site-12da662dec230e56.js  site-12da662dec230e56_bg.wasm  site-1d6bca1a924e3169_bg.wasm  site-4212dc1783a6d0c5_bg.wasm  site-61282604eec6a2b7.js  site-61282604eec6a2b7_bg.wasm  site-936e2dc2af13af1a.js  site-936e2dc2af13af1a_bg.wasm  site-ac4f56de8a282f8c.js  site-ac4f56de8a282f8c_bg.wasm  site-d6851eb082eab238.js  site-d6851eb082eab238_bg.wasm  site-f52431b89cce9e7d.js  site-f52431b89cce9e7d_bg.wasm  styles-a35e00611eaf5efa.css  styles.css
.cargo/: config.toml
.github/: codecov.yml
.github/workflows/: check.yml  fuzz.yml  releases.yml  safety.yml  test.yml
benches/: basic.rs  environments.rs  primitive_parsing.rs
design/: suffixes.md
docs/: cross-browser-render.css  cross-browser.css  cross-browser.html  index.html  mozilla.html  usage.md  wikipedia.html
docs/LatinModern/: mathfonts.css
examples/: write_to_string.rs
font/: font.css
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: mathml.rs  parse.rs  quadratic.rs  vs_katex.rs
site/: Cargo.toml  Trunk.toml  index.html  style.css
site/docs/: usage.md
site/src/: lib.rs  main.rs
src/: ast.rs  attribute.rs  config.rs  event.rs  lib.rs  macros.rs  mathml.rs  parse.rs  parser.rs
src/mathml/: styles.css
src/parse/: lex.rs  operator_table.rs  primitives.rs
src/parser/: error.rs  lex.rs  macros.rs  operator_table.rs  primitives.rs  state.rs  storage.rs  tables.rs
tests/: atom_types.rs  cross-browser.rs  environments.rs  errors.rs  fonts.rs  latexml.rs  mathml.rs  miscellaneous.rs  mozilla.rs  text_mode.rs  wikipedia.rs
tests/common/: mod.rs
