[package]
name = "pulldown-latex"
version = "0.1.0"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Pull parser to convert LaTeX equations to MathML"
repository = "https://github.com/Carlosted/pulldown-latex"
readme = "README.md"
license = "MIT"
keywords = ["latex", "mathml", "parser"]
categories = ["Parsing tools", "Mathematics"]

[dependencies]
thiserror = "1.0.57"

[dev-dependencies]
anyhow = "1"
libtest-mimic = "0.7"
heck = "0.5"
inventory = "0.3"
tempfile = "3"
fantoccini = "0.19"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "process", "fs"] }

[[example]]
name = "write_to_string"
doc-scrape-examples = true

[[test]]
name = "wikipedia"
path = "tests/wikipedia.rs"
harness = false

[[test]]
name = "cross-browser"
path = "tests/cross-browser.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
