[package]
name = "pulldown-latex"
version = "0.7.1"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Pull parser to convert LaTeX equations to MathML"
repository = "https://github.com/Carlosted/pulldown-latex"
readme = "README.md"
license = "MIT"
keywords = ["latex", "mathml", "parser"]
categories = ["parsing", "parser-implementations", "mathematics"]
rust-version = "1.74.1"

[dependencies]
bumpalo = { version = "3.16", features = ["collections"] }

[dev-dependencies]
anyhow = "1"
libtest-mimic = "0.8.1"
heck = "0.5"
inventory = "0.3"
tempfile = "3"
fantoccini = "0.21"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "process", "fs"] }
criterion = "0.5"

# for minimal-versions
[target.'cfg(any())'.dependencies]
regex = { version = "1.5.1", optional = true }

[[example]]
name = "write_to_string"
doc-scrape-examples = true

[[test]]
name = "wikipedia"
path = "tests/wikipedia.rs"
harness = false

[[test]]
name = "mozilla"
path = "tests/mozilla.rs"
harness = false

[[test]]
name = "latexml"
path = "tests/latexml.rs"
harness = false

[[test]]
name = "cross-browser"
path = "tests/cross-browser.rs"
harness = false

[[test]]
name = "errors"
path = "tests/errors.rs"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "environments"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
