[package]
name = "pulldown-latex-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
fantoccini = "0.21"
image = "0.25"
katex = "0.4.6"
libfuzzer-sys = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "process", "fs"] }

[dependencies.pulldown-latex]
path = ".."

[[bin]]
name = "vs_katex"
path = "fuzz_targets/vs_katex.rs"
test = false
doc = false
bench = false
